<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorBackgroundApp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ariondan.vendor.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/ImageView"
                android:layout_width="wrap_content"
                android:layout_height="112dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/icon" />

            <Button
                android:padding="25dp"
                android:id="@+id/button_Products"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/products"
                android:layout_margin="10dp"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_history"
                android:padding="25dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/history"
                android:textAllCaps="false"
                android:layout_margin="10dp"
                />

            <Button
                android:id="@+id/button_logOut"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:padding="25dp"
                android:text="@string/LogOut"
                android:textAllCaps="false" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>